# Music-recommendation-system

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  config.py  docker-compose.yml  pyproject.toml  setup.sh
api/: main.py
app/: app.py  style.css
data/processed/: models_summary.csv
docker/: backend-entrypoint.sh  train-entrypoint.sh
models/: MFCC_best_models_summary.csv  MFCC_model_comparison_results.csv  best_models_summary.csv  model_comparison_results.csv  rf_model_metadata.json  ridge_model_metadata.json
models/acousticness/: svr_acousticness_metadata.json  svr_acousticness_model.pkl
models/danceability/: rf_danceability_metadata.json  rf_danceability_model.pkl
models/energy/: svr_energy_metadata.json  svr_energy_model.pkl  svr_energy_scaler.pkl
models/loudness/: rf_loudness_model.pkl  svr_loudness_metadata.json
notebooks/: .gitignore  Random-forest-all-features.ipynb  SVM-RF-Boost-danceability.ipynb  audio_ext.ipynb  best_models_summary.csv  classes-final.ipynb  cosine_similarity.ipynb  data_cmptbl.ipynb  feature-engineering.ipynb  lbp_hog.ipynb  mfcc-svm.ipynb  per-feature.ipynb  recommend_test.ipynb  trial.ipynb
notebooks/audio_cache/: cache_index.pkl
src/music_recommender/: config.py
src/music_recommender/backend/: backend.py
src/music_recommender/data/: extractors.py  loaders.py  mfcc_extractor.py  pipeline.py  reduction.py
src/music_recommender/evaluation/: evaluator.py  visualizer.py
src/music_recommender/frontend/: app.py  style.css
src/music_recommender/models/: MFCC_recommender.py  hybrid.py  (+3 more)
(+7 files in other folders)
