[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "music-recommender"
version = "0.1.0"
description = "A Music recommender system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=4.2.0",
  "ipykernel>=6.30.1",
  "loguru>=0.7.3",
  "pandas>=2.3.3",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.11.0",
  "unidecode>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false

[tool.setuptools.package-dir]
"" = "."
