[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "music-recommender"
version = "0.1.0"
description = "A Music recommender system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=4.2.0",
  "ipykernel>=6.30.1",
  "jupyterlab>=4.4.9",
  "librosa>=0.11.0",
  "loguru>=0.7.3",
  "matplotlib>=3.10.7",
  "notebook>=7.4.7",
  "numpy>=2.3.3",
  "pandas>=2.3.3",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.11.0",
  "scikit-image>=0.25.2",
  "scikit-learn>=1.7.2",
  "seaborn>=0.13.2",
  "unidecode>=1.4.0",
  "xgboost[cuda]>=3.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false

[tool.setuptools.package-dir]
"" = "."
